2007-10-17  Johannes Schmid <jhs@gnome.org>

	* NEWS: Updated
	* configure.in: Bumped version to 2.2.2
	* plugins/build-basic-autotools/build-basic-autotools.c:
	(on_session_save), (on_session_load):
	* plugins/build-basic-autotools/executer.c:
	(get_program_parameters):
	
	Follow-up fix of #477976 (from trunk)
	
	* plugins/sourceview/anjuta-document.c:
	(anjuta_document_get_current_word):
	* plugins/sourceview/anjuta-document.h:
	* plugins/sourceview/sourceview.c: (on_document_char_added),
	(ieditor_get_current_word):
	
	Fixed get_current_word (useful for API help)

2007-10-16 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/breakpoints.c:
	Fix bug#487112, crash while removing a breakpoint in a new file

2007-10-14 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/gdb/plugin.c:
	Fix bug#486597, crash when gdb is not installed 

2007-10-01 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/project-wizard/autogen.c:
	Fix bug#482067, escape project wizard user defined strings

2007-10-01  Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	* plugins/build-basic-autotools/build-basic-autotools.c:
	(basic_autotools_plugin_instance_init):
	* plugins/build-basic-autotools/build-basic-autotools.h:
	* plugins/build-basic-autotools/executer.c:
	(get_program_parameters):

	Fixed #477976 – Keybinding in run dialog

2007-09-24  Johannes Schmid <jhs@gnome.org>

	* plugins/search/search-replace.c: (on_message_clicked):

	Fixed #427104 – No "highlight" of lines matching find-result
	(from trunk)

2007-09-24  Johannes Schmid <jhs@gnome.org>

	* src/anjuta.glade:

	Fixed #479020 – Use of old open file dialog instead of GtkFileChooser

2007-09-24  Yang Hong  <hongyang@redflag-linux.com>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/build-basic-autotools/executer.c: (execute_program):
	Fix #478238 – set env for execute programe in the terminal

2007-09-10  Johannes Schmid <jhs@gnome.org>
