@@ -1,3 +1,10 @@
+2007-10-19  Johannes Schmid <jhs@gnome.org>
+
+	* plugins/subversion/subversion-callbacks.c: (check_filename):
+	* NEWS: Updated
+
+	Fixed #487854 – Anjuta crashes when i try to add a SVN url
+
 2007-10-17  Johannes Schmid <jhs@gnome.org>
 
 	* NEWS: Updated
